- Added trace message in exception blog in MySqlConnection.Abort() method (bug #52769)
- changed mapping of latin1 from latin1 to windows-1252 (bug #51927)
- flushed out many more entires in error code enum (bug #51988)
- changed how we respond when the user selects 'functions return string=true'.  Now we no longer force the type to var string but just let the underlying type come through but we strip the binary flag (bug #52187)
- Replaced check for Settings.Logging when logging information in the 
  procedure cache.  This is already in 6.1 and 6.0 but got "misplaced" in 6.2
  (bug #52475)
- SessionProvider : Avoid SQLNullValueException if lockId returned by select is 
  NULL (bug#52175)
- improved our procedure caching so that if you drop and recreate a proc with a different number of parameters
  it will find the new proc as long as your are actually using the right number of parameters (bug #52562)

Version 6.2.3
- fixed InvalidOperationException when accessing Stream.ReadTimeout or Stream.WriteTimeout on CF
  (bug #50321)
- fixed entity framework function processing so that it handles stored functions properly
  (bug #45277)
- fixed a bug with prepared statements and unsigned bigint.  Patch also provided a nice speedup to reading
  integer values from the wire (bug #49794)
- fixed problem where not specifying the data type of the return value of a function caused it to 
  mistakenly use Decimal as the return type (bug #49642)
- fixed bug where a scipt that had an empty last line would cause an InvalidOperationException (bug #50344)
- fixed bug in logging that kept no index and bad index warnings from being sent
- fixed bug where giving a connection string option like (option=) and then trying to read
  the option back via the property would fail (bug #51209)
- fixed bug where a connection could not be reused in the IDE in some circumstances (bug #41629)
- small performance fix (bug #51149)