@@ -130,13 +130,11 @@
     <Compile Include="DDEX\MySqlConnectionProperties.cs" />
     <Compile Include="DDEX\MySqlConnectionSupport.cs" />
     <Compile Include="DDEX\MySqlConnectionUIControl.cs">
-      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="DDEX\MySqlConnectionUIControl.designer.cs">
       <DependentUpon>MySqlConnectionUIControl.cs</DependentUpon>
     </Compile>
     <Compile Include="DDEX\MySqlDataConnectionPromptDialog.cs">
-      <SubType>Form</SubType>
     </Compile>
     <Compile Include="DDEX\MySqlDataConnectionPromptDialog.Designer.cs">
       <DependentUpon>MySqlDataConnectionPromptDialog.cs</DependentUpon>
